--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -590,3 +590,11 @@ label.valid {
     margin-bottom: 10px; } }
 
 /*# sourceMappingURL=style.css.map */
+
+
+.invalid-login{
+  color: red;
+  font-weight: bold;
+  font-size: small;
+  text-align: center;
+}
